_includes/manuals/1.1/3.5.3_database_setup.md

Foreman is a rails application. Therefore, anything that is supported under RAILS (sqlite, mysql, postgresql, ...) can be used. See <a href="manuals/1.1/index.html#3.3InstallFromPackages">3.3 Install From Packages</a> for a list of packages for connecting foreman to the databse of your choice. At this time, Oracle DB is known to not work. Patches are welcome!

The database configuration file can be found at:

<pre>/etc/foreman/config/database.yml</pre>

#### SQLite (default)

<div class="alert alert-info">When using SQLite, you can install the
foreman-sqlite package. See <a href="manuals/1.1/index.html#3.3InstallFromPackages">3.3 Install From Packages</a>.</div>

By default, the database will be created in the db subdirectory.

{% highlight ruby %}
production:
  adapter: sqlite3
  database: db/production.sqlite3
  pool: 5
  timeout: 5000
{% endhighlight %}

#### MySQL

<div class="alert alert-info">When using MySQL, you can install the
foreman-mysql package. See <a href="manuals/1.1/index.html#3.3InstallFromPackages">3.3 Install From Packages</a>.</div>

Edit your config/database.yml and modify:
{% highlight ruby %}
production:
  adapter: mysql
  database: puppet
  username: puppet
  password: password
  host: localhost
  socket: "/var/run/mysqld/mysqld.sock"
{% endhighlight %}

If you use foreman 1.0 with foreman-mysql2 use 'adapter: mysql2' instead

Afterwards you would need to re-populate your database, simply execute extras/dbmigrate script.

#### PostGreSQL

<div class="alert alert-info">When using PostgreSQL, you can install the
foreman-postgresql package. See <a href="manuals/1.1/index.html#3.3InstallFromPackages">3.3 Install From Packages</a>.</div>

Edit your config/database.yml and modify:
{% highlight ruby %}
production:
  adapter: postgresql
  database: foreman
  username: foreman
  password: password
  host: localhost
{% endhighlight %}

#### Switching from SQLite to MySQL/PostgreSQL while maintaining existing data

We have a rake task for this. First setup your database.yml to have the sqlite db as production and the mysql/psql db as dev:

{% highlight ruby %}
production:
  adapter: sqlite3
  database: db/production.sqlite3
  pool: 5
  timeout: 5000

development:
  adapter: postgresql
  database: foreman
  username: foreman
  password: password
  host: localhost
{% endhighlight %}

Now migrate both dbs so they're consistent:

{% highlight ruby %}
bundle exec rake db:migrate RAILS_ENV=production
bundle exec rake db:migrate RAILS_ENV=development
{% endhighlight %}

Now move the data to the new db
{% highlight ruby %}
bundle exec rake db:convert:prod2dev
{% endhighlight %}

Once you've migrated to your new database using prod2dev, you should update your database.yml file to point your 'production' environment at the new database.
You should also update the 'development' environment to point to an alternative location (for example, at SQLite) to ensure you don't accidentally overwrite your production database.

##### Special note for migrating to Postgres

The psql sequence numbers will be wrong after the prod2dev execution. You can fix them like this:

{% highlight bash %}
cat <<EOF > reset.sql
SELECT  'SELECT SETVAL(' ||quote_literal(S.relname)|| ', MAX(' ||quote_ident(C.attname)|| ') ) FROM ' ||quote_ident(T.relname)|| ';'
FROM pg_class AS S, pg_depend AS D, pg_class AS T, pg_attribute AS C
WHERE S.relkind = 'S'
    AND S.oid = D.objid
    AND D.refobjid = T.oid
    AND D.refobjid = C.attrelid
    AND D.refobjsubid = C.attnum
ORDER BY S.relname;
EOF
psql -Atq -f reset.sql -o temp foreman
psql -f temp foreman
rm temp reset.sql
{% endhighlight %}

(big thanks to [Fixing Sequences](http://wiki.postgresql.org/wiki/Fixing_Sequences) for the fix)
